# CrackerPP

./: CMakeLists.txt  README.md  file_loader.cpp  file_loader.h  file_manager.cpp  file_manager.h  main.cpp  mode.h
attacks/: DataSource.h  attack.cpp  attack.h  brute_force.cpp  brute_force.h  brutte_force.cpp  brutte_force.h  data_source.h  dictionary.cpp  dictionary.h
hashes/: broken_hash.cpp  broken_hash.h  grouped_hashes.cpp  grouped_hashes.h  hash_identifier.cpp  hash_identifier.h  hash_util.cpp  hash_util.h
